// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: AutoComplete should be defined 1`] = `
<div
  className="anchor-auto-complete sc-kAzzGY kCglxU"
  color="#595959"
>
  <div
    className="anchor-input auto-complete-input sc-iwsKbI ctfGER"
    onClick={[Function]}
    size="lg"
  >
    <div
      className="anchor-grid Grid__Grid-bojwg hIksjk"
    >
      <div
        className="anchor-cell sc-gZMcBi bVNDIc Cell__Cell-jsYrZv fDguhG"
      >
        <input
          className="sc-gqjmRU dLsVjF"
          name="auto-complete"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          placeholder="Search..."
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Component: AutoComplete should render with a shadow 1`] = `
<div
  className="anchor-auto-complete sc-kAzzGY bEZHT"
  color="#595959"
>
  <div
    className="anchor-input auto-complete-input sc-iwsKbI ctfGER"
    onClick={[Function]}
    size="lg"
  >
    <div
      className="anchor-grid Grid__Grid-bojwg hIksjk"
    >
      <div
        className="anchor-cell sc-gZMcBi bVNDIc Cell__Cell-jsYrZv fDguhG"
      >
        <input
          className="sc-gqjmRU dLsVjF"
          name="auto-complete"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Component: AutoComplete should render with a suffix and prefix 1`] = `
<div
  className="anchor-auto-complete sc-kAzzGY kCglxU"
  color="#595959"
>
  <div
    className="anchor-input auto-complete-input sc-iwsKbI ctfGER"
    onClick={[Function]}
    size="lg"
  >
    <div
      className="anchor-grid Grid__Grid-bojwg cutIDT"
    >
      <div
        className="Cell__Cell-jsYrZv sc-dnqmqq erejOK"
      >
        <div>
          prefix
        </div>
      </div>
      <div
        className="anchor-cell sc-gZMcBi bVNDIc Cell__Cell-jsYrZv fDguhG"
      >
        <input
          className="sc-gqjmRU dLsVjF"
          name="auto-complete"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="Cell__Cell-jsYrZv sc-dnqmqq erejOK"
      >
        <div>
          suffix
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component: AutoComplete should render without a border 1`] = `
<div
  className="anchor-auto-complete sc-kAzzGY cLpDOK"
  color="#595959"
>
  <div
    className="anchor-input auto-complete-input sc-iwsKbI ctfGER"
    onClick={[Function]}
    size="lg"
  >
    <div
      className="anchor-grid Grid__Grid-bojwg hIksjk"
    >
      <div
        className="anchor-cell sc-gZMcBi bVNDIc Cell__Cell-jsYrZv fDguhG"
      >
        <input
          className="sc-gqjmRU dLsVjF"
          name="auto-complete"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;
